force-app/main/default/objects/Calculator_Dropdown__c/Calculator_Dropdown__c.object-meta.xml
<CustomObject>
    <description>Dropdown items with adjustments for pricing calculator</description>
    <label>Calculator Dropdown</label>
    <nameField>
        <label>Calculator Dropdown Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calculator Dropdowns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>