force-app/main/default/objects/Calculator_Dropdown__c/fields/Display_Format__c.field-meta.xml
<CustomField>
    <fullName>Display_Format__c</fullName>
    <label>Display Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>