force-app/main/default/objects/Calculator_Dropdown__c/fields/Dropdown_Value__c.field-meta.xml
<CustomField>
    <fullName>Dropdown_Value__c</fullName>
    <label>Dropdown Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>