force-app/main/default/objects/Calculator_Dropdown__c/fields/Form_Field__c.field-meta.xml
<CustomField>
    <fullName>Form_Field__c</fullName>
    <label>Form Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Business Miles</fullName>
            </value>
            <value>
                <fullName>Entity Type</fullName>
            </value>
            <value>
                <fullName>Filing Status</fullName>
            </value>
            <value>
                <fullName>Foreign Owners</fullName>
            </value>
            <value>
                <fullName>Foreign State</fullName>
            </value>
            <value>
                <fullName>Industry Type</fullName>
            </value>
            <value>
                <fullName>Living Abroad</fullName>
            </value>
            <value>
                <fullName>Number of Contractors</fullName>
            </value>
            <value>
                <fullName>Number of Employees</fullName>
            </value>
            <value>
                <fullName>Number of K1s</fullName>
            </value>
            <value>
                <fullName>Number of Owners</fullName>
            </value>
            <value>
                <fullName>Number of Rental Properties</fullName>
            </value>
            <value>
                <fullName>Number of Transactions</fullName>
            </value>
            <value>
                <fullName>Office Square Footage</fullName>
            </value>
            <value>
                <fullName>Personal Income</fullName>
            </value>
            <value>
                <fullName>Projected 1st Year Profit</fullName>
            </value>
            <value>
                <fullName>Projected 1st Year Revenue</fullName>
            </value>
            <value>
                <fullName>Run Payroll Before</fullName>
            </value>
            <value>
                <fullName>State of Incorporation</fullName>
            </value>
            <value>
                <fullName>Total Investor Funding</fullName>
            </value>
            <value>
                <fullName>Total Startup Cost</fullName>
            </value>
            <value>
                <fullName>Website Selling Goods</fullName>
            </value>
            <value>
                <fullName>Worked With Accountant in Past</fullName>
            </value>
            <value>
                <fullName>Years In Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>