force-app/main/default/objects/Calculator_Dropdown__c/fields/Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Price_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Price Adjustment</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>