force-app/main/default/objects/Calculator_Dropdown__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Return</fullName>
            </value>
            <value>
                <fullName>Personal Return</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>State Filing</fullName>
            </value>
            <value>
                <fullName>LLC State Filing</fullName>
            </value>
            <value>
                <fullName>Corp State Filing</fullName>
            </value>
            <value>
                <fullName>Back Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Foreign State</fullName>
            </value>
            <value>
                <fullName>Back Quarterly Payroll</fullName>
            </value>
            <value>
                <fullName>Back Business Return</fullName>
            </value>
            <value>
                <fullName>Back Personal Return</fullName>
            </value>
            <value>
                <fullName>Non-Profit Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Non-Profit Back Bookkeeping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>