force-app/main/default/objects/Calculator_Dropdown__c/fields/Setup_fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_fee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Setup fee</label>
    <type>Checkbox</type>
</CustomField>