force-app/main/default/objects/Calculator_Dropdown__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Form_Field__c</columns>
    <columns>Dropdown_Value__c</columns>
    <columns>Price_Adjustment__c</columns>
    <columns>Product__c</columns>
    <columns>Sort__c</columns>
    <columns>Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>