force-app/main/default/objects/Calculator_Dropdown__c/listViews/State_Filing_Fees.listView-meta.xml
<ListView>
    <fullName>State_Filing_Fees</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Price_Adjustment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value>LLC State Filing,Corp State Filing</value>
    </filters>
    <label>State Filing Fees</label>
</ListView>